Rename praise-regret-log into self-monitor
